# azimuth

./: .gitignore  README.md  pyproject.toml
azimuth/: az.py
azimuth/core/: __init__.py  fetcher.py  models.py  providers.py  utils.py
azimuth/extensions/: crypto.py
azimuth/providers/: binance.py  bybit.py  mexc.py
samples/: binance.ipynb  binance_mexc_spreed.ipynb  bybit.ipynb  mexc.ipynb
tests/: test_az_core.py  test_az_crypto.py
