[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Azimuth"
description = "Azimuth project"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
dynamic = ["version", "dependencies", "optional-dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/Alesh/azimuth"
Issues = "https://github.com/Alesh/azimuth/issues"

[tool.setuptools.packages.find]
include = ["azimuth"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = [
    "tests/requirements.txt"
] }

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
